5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1638_651.log
== TEST (2019-04-09 13:07:10) 
-- CODE:
al = float(input("metros"))
s = input("sexo? (M/F)")

if(s.upper() == M)
	ph = (72.2 * al) - 58
	print(round(ph,2))
else(s.upper() == F)
	pm = (62.1* al) - 44.7
	print(round(pm,2))
	
	


#nota = float(input("nota do abencoado: "))
#boni = input("bonificacao? (S/N) ")

#if(boni.upper() == "S"):
	#print(nota*1.1)
#else:
	#print(nota)
-- ERROR:
File "XXXX", line 4
    if(s.upper() == M)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:08:37) 
-- CODE:
al = float(input("metros"))
s = input("sexo? (M/F)")

if(s.upper() == M):
	ph = (72.2 * al) - 58
	print(round(ph,2))
else(s.upper() == F):
	pm = (62.1* al) - 44.7
	print(round(pm,2))
	
	


#nota = float(input("nota do abencoado: "))
#boni = input("bonificacao? (S/N) ")

#if(boni.upper() == "S"):
	#print(nota*1.1)
#else:
	#print(nota)
-- ERROR:
File "XXXX", line 7
    else(s.upper() == F):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:08:55) 
-- CODE:
al = float(input("metros"))
s = input("sexo? (M/F)")

if(s.upper() == M):
	ph = (72.2 * al) - 58
	print(round(ph,2))
else:
	pm = (62.1* al) - 44.7
	print(round(pm,2))
	
	


#nota = float(input("nota do abencoado: "))
#boni = input("bonificacao? (S/N) ")

#if(boni.upper() == "S"):
	#print(nota*1.1)
#else:
	#print(nota)
-- EXECUTION TIME:
0.175077
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/651/main.py", line 4, in <module>
    if(s.upper() == M):
NameError: name 'M' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:08:56) 
-- CODE:
al = float(input("metros"))
s = input("sexo? (M/F)")

if(s.upper() == M):
	ph = (72.2 * al) - 58
	print(round(ph,2))
else:
	pm = (62.1* al) - 44.7
	print(round(pm,2))
	
	


#nota = float(input("nota do abencoado: "))
#boni = input("bonificacao? (S/N) ")

#if(boni.upper() == "S"):
	#print(nota*1.1)
#else:
	#print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(s.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:10:08) 
-- CODE:
al = float(input("metros"))
s = input("sexo? (M/F)")

if(s.upper() == M):
	ph = (72.2 * al) - 58
	print(round(ph,2))
else:
	pm = (62.1* al) - 44.7
	print(round(pm,2))
	
	


#nota = float(input("nota do abencoado: "))
#boni = input("bonificacao? (S/N) ")

#if(boni.upper() == "S"):
	#print(nota*1.1)
#else:
	#print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(s.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:11:03) 
-- CODE:
al = float(input("metros"))
s = input("sexo? (M/F)")

if(s.upper() == "M"):
	ph = (72.2 * al) - 58
	print(round(ph,2))
else:
	pm = (62.1* al) - 44.7
	print(round(pm,2))
	
	


#nota = float(input("nota do abencoado: "))
#boni = input("bonificacao? (S/N) ")

#if(boni.upper() == "S"):
	#print(nota*1.1)
#else:
	#print(nota)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:11:23) 
-- CODE:
al = float(input("metros"))
s = input("sexo? (M/F)")

if(s.upper() == "M"):
	ph = (72.2 * al) - 58
	print(round(ph,2))
else:
	pm = (62.1* al) - 44.7
	print(round(pm,2))
	
	


#nota = float(input("nota do abencoado: "))
#boni = input("bonificacao? (S/N) ")

#if(boni.upper() == "S"):
	#print(nota*1.1)
#else:
	#print(nota)
-- EXECUTION TIME:
0.229941
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.09
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:11:32) 
-- CODE:
al = float(input("metros"))
s = input("sexo? (M/F)")

if(s.upper() == "M"):
	ph = (72.7 * al) - 58
	print(round(ph,2))
else:
	pm = (62.1* al) - 44.7
	print(round(pm,2))
	
	


#nota = float(input("nota do abencoado: "))
#boni = input("bonificacao? (S/N) ")

#if(boni.upper() == "S"):
	#print(nota*1.1)
#else:
	#print(nota)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:11:41) 
-- CODE:
al = float(input("metros"))
s = input("sexo? (M/F)")

if(s.upper() == "M"):
	ph = (72.7 * al) - 58
	print(round(ph,2))
else:
	pm = (62.1* al) - 44.7
	print(round(pm,2))
	
	


#nota = float(input("nota do abencoado: "))
#boni = input("bonificacao? (S/N) ")

#if(boni.upper() == "S"):
	#print(nota*1.1)
#else:
	#print(nota)
-- EXECUTION TIME:
0.130274
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
